--- a/index.html
+++ b/index.html
@@ -1,1 +1,163 @@
-<h1>Русалийски Проход 10</h1>
+<!doctype html>
+<html lang="bg">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Русалийски Проход 10</title>
+    <meta name="description" content="Етажна собственост - Русалийски проход 10"/>
+	<link rel="icon" type="image/jpg" href="icon/favicon.ico"/>
+    <link href="https://fonts.googleapis.com/css?family=K2D:300,400,500,700,800" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/custom.css">
+</head>
+<body>
+
+<section class="bg-gradient pt-5 pb-6">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 d-flex flex-row align-items-center justify-content-between">
+                <div class="heading-brand">Русалийски 10</div>
+                <a href="#payment" class="btn btn-dark">Плати</a>
+            </div>
+        </div>
+        <div class="row mt-6">
+            <div class="col-md-8 mx-auto text-center">
+                <h1><a id="debt">1. Как да разбера колко дължа на ЕС?</a></h1>
+                <p class="lead mb-2">Дължимата сума може да се разбере по един от следните начини:</p>
+				<div class="text-center">
+					<div class="lead">А) Инсталирайте Homie</div>
+					<div class="col-md-12">
+						<div class="balloon-w">
+							<b>Стъпка 1</b>: Инсталирайте <a href="https://homie.bg/" target="_blank"><u>Homie</u></a><br/>
+							<b>Стъпка 2</b>: Регистрирайте се като потребител<br/>
+							<b>Стъпка 3</b>: Въведете партидния номер на вашия апартамент
+						</div>
+					</div>
+
+					<div class="lead mt-3">Б) Свържете се с касиер</div>
+					<div class="col-md-12">
+						<div class="balloon-w">
+							<b>Касиер</b>: Боряна Балканска<br/>
+							<b>Тел.</b>: 0899 49 48 14
+						</div>
+					</div>
+				</div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="py-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 mx-auto text-center">
+                <h1><a id="payment">2. Как да си платя входната такса?</a></h1>
+                <p class="lead mb-2">Таксите за входа се плащат <b><u>ежемесечно</u></b>. Плащането може да се случи по един от следните начини:</p>
+				<div class="text-center">
+					<div class="lead">А) Банков превод</div>
+					<div class="col-md-12">
+						<div class="balloon-y">
+							<b>Получател</b>: Боряна Балканска<br/>
+							<b>IBAN</b>: <br/>
+							<b>Основание</b>: Вх. такса ап. ХХ, месец ХХ
+						</div>
+					</div>
+
+					<div class="lead mt-3">Б) На Изипей каса</div>
+					<div class="col-md-12">
+						<div class="balloon-y">
+							<b>Получател</b>: Боряна Балканска<br/>
+							<b>КИН</b>: <br/>
+							<b>Основание</b>: Вх. такса ап. ХХ, месец ХХ
+						</div>
+					</div>
+
+					<div class="lead">В) На банкомат</div>
+					<div class="col-md-12">
+						<div class="balloon-y">
+							<b>B-Pay код</b>: 15005<br/>
+							<b>ЕГН</b>: 8601257577<br/>
+							<b>Инструкции</b>: <a href="https://www.epay.bg/v3main/front?p=b_pay" target="_blank">B Pay</a>
+						</div>
+					</div>
+					<div class="lead">Г) На ръка</div>
+					<div class="col-md-12">
+						<div class="balloon-y">
+							<b>Къде</b>: вх. Б, ап. 33<br/>
+							<b>Кога</b>: от 1-о до 3-о число всеки месец<br/>
+							<b>Тел.</b>: 0899 49 48 14
+						</div>
+					</div>
+				</div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="bg-gradient pt-5 pb-6">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 mx-auto text-center">
+                <h1><a id="communication">3. Как се осъществява комуникацията в блока?</a></h1>
+				<div class="text-center">
+					<div class="lead"><span data-feather="command" width="28" height="28" style="padding-top:10px;"></span>Viber</div>
+					<div class="col-md-12">
+						<div class="balloon-w">
+							<b>Стъпка 1</b>: Инсталирайте <a href="https://www.viber.com/en/" target="_blank"><u>Viber</u></a><br/>
+							<b>Стъпка 2</b>: Поискайте от екипа достъп до групата
+						</div>
+					</div>
+
+					<div class="lead mt-3"><span data-feather="command" width="28" height="28" style="padding-top:10px;"></span>Homie</div>
+					<div class="col-md-12">
+						<div class="balloon-w">
+							<b>Стъпка 1</b>: Инсталирайте <a href="https://homie.bg/" target="_blank"><u>Homie</u></a><br/>
+							<b>Стъпка 2</b>: Регистрирайте се като потребител<br/>
+							<b>Стъпка 3</b>: Въведете партидния номер на вашия апартамент
+						</div>
+					</div>
+
+					<div class="lead mt-3"><span data-feather="command" width="28" height="28" style="padding-top:10px;"></span>Drive</div>
+					<p class="lead mb-2">Решения на ОС, финансови, ВиК отчети може да се открият тук:</p>
+				
+					<div class="col-md-12">
+						<div class="balloon-w">
+							<b>Google Drive</b>: Виж <a href="" target="_blank"><u>ТУК</u></a>
+						</div>
+					</div>
+				</div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="py-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 mx-auto text-center">
+                <h1><a id="payment">4. Контакти</a></h1>
+                <p class="lead mb-2">Ако някой желае да се включи в екипа, нека се свърже с:</p>
+				<div class="text-center">
+					<div class="col-md-12">
+						<div class="balloon-y">
+							<b>Домоуправител</b>: Сотир Сотиров, 0888 58 08 03<br/>
+							<b>Касиер</b>: Боряна Балканска, 0899 49 48 14<br/>
+							<b>Пом. касиер</b>: Александрина Георгиева<br/>
+							<b>Пом. касиер</b>: Николай Миков<br/>
+							<b>Чипове и камери</b>: Цветелин Крумов<br/>
+							<b>ИТ</b>: Мирослав Джоканов<br/>
+							<b>ВиК</b>: Александър Тодоров<br/>
+						</div>
+					</div>
+				</div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.7.3/feather.min.js"></script>
+<script src="js/scripts.js"></script>
+</body>
+</html>
