--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="bg">
 <head>
     <meta charset="utf-8">
+    <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Русалийски Проход 10</title>
     <meta name="description" content="Етажна собственост - Русалийски проход 10"/>
-	<link rel="icon" type="image/jpg" href="icon/favicon.ico"/>
-    <link href="https://fonts.googleapis.com/css?family=K2D:300,400,500,700,800" rel="stylesheet">
+    <link rel="icon" type="image/jpg" href="icon/favicon.ico"/>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/custom.css">
 </head>
@@ -25,7 +25,7 @@
                 <h1><a id="debt">1. Как да разбера колко дължа на ЕС?</a></h1>
                 <p class="lead mb-2">Дължимата сума може да се разбере по един от следните начини:</p>
 				<div class="text-center">
-					<div class="lead">А) Инсталирайте Homie</div>
+					<div class="lead"><h4>** Инсталирайте Homie **</h4></div>
 					<div class="col-md-12">
 						<div class="balloon-w">
 							<b>Стъпка 1</b>: Инсталирайте <a href="https://homie.bg/" target="_blank"><u>Homie</u></a><br/>
@@ -34,7 +34,7 @@
 						</div>
 					</div>
 
-					<div class="lead mt-3">Б) Свържете се с касиер</div>
+					<div class="lead mt-3"><h4>** Свържете се с касиера **</h4></div>
 					<div class="col-md-12">
 						<div class="balloon-w">
 							<b>Касиер</b>: Боряна Балканска<br/>
@@ -54,7 +54,7 @@
                 <h1><a id="payment">2. Как да си платя входната такса?</a></h1>
                 <p class="lead mb-2">Таксите за входа се плащат <b><u>ежемесечно</u></b>. Плащането може да се случи по един от следните начини:</p>
 				<div class="text-center">
-					<div class="lead">А) Банков превод</div>
+					<div class="lead"><h4>** Банков превод **</h4></div>
 					<div class="col-md-12">
 						<div class="balloon-y">
 							<b>Получател</b>: Боряна Балканска<br/>
@@ -63,7 +63,7 @@
 						</div>
 					</div>
 
-					<div class="lead mt-3">Б) На Изипей каса</div>
+					<div class="lead mt-3"><h4>** Изипей каса **</h4></div>
 					<div class="col-md-12">
 						<div class="balloon-y">
 							<b>Получател</b>: Боряна Балканска<br/>
@@ -72,7 +72,7 @@
 						</div>
 					</div>
 
-					<div class="lead">В) На банкомат</div>
+					<div class="lead"><h4>** Банкомат **</h4></div>
 					<div class="col-md-12">
 						<div class="balloon-y">
 							<b>B-Pay код</b>: 15005<br/>
@@ -80,7 +80,7 @@
 							<b>Инструкции</b>: <a href="https://www.epay.bg/v3main/front?p=b_pay" target="_blank">B Pay</a>
 						</div>
 					</div>
-					<div class="lead">Г) На ръка</div>
+					<div class="lead"><h4>** На ръка **</h4></div>
 					<div class="col-md-12">
 						<div class="balloon-y">
 							<b>Къде</b>: вх. Б, ап. 33<br/>
@@ -100,15 +100,15 @@
             <div class="col-md-8 mx-auto text-center">
                 <h1><a id="communication">3. Как се осъществява комуникацията в блока?</a></h1>
 				<div class="text-center">
-					<div class="lead"><span data-feather="command" width="28" height="28" style="padding-top:10px;"></span>Viber</div>
+					<div class="lead"><h4>** Viber **</h4></div>
 					<div class="col-md-12">
 						<div class="balloon-w">
-							<b>Стъпка 1</b>: Инсталирайте <a href="https://www.viber.com/en/" target="_blank"><u>Viber</u></a><br/>
-							<b>Стъпка 2</b>: Поискайте от екипа достъп до групата
+							<b>Стъпка 1</b>: Инсталирайте <a href="https://www.viber.com/" target="_blank"><u>Viber</u></a><br/>
+							<b>Стъпка 2</b>: Поискайте достъп до групата
 						</div>
 					</div>
 
-					<div class="lead mt-3"><span data-feather="command" width="28" height="28" style="padding-top:10px;"></span>Homie</div>
+					<div class="lead mt-3"><h4>** Homie **</h4></div>
 					<div class="col-md-12">
 						<div class="balloon-w">
 							<b>Стъпка 1</b>: Инсталирайте <a href="https://homie.bg/" target="_blank"><u>Homie</u></a><br/>
@@ -117,7 +117,7 @@
 						</div>
 					</div>
 
-					<div class="lead mt-3"><span data-feather="command" width="28" height="28" style="padding-top:10px;"></span>Drive</div>
+					<div class="lead mt-3"><h4>** Drive **</h4></div>
 					<p class="lead mb-2">Решения на ОС, финансови, ВиК отчети може да се открият тук:</p>
 				
 					<div class="col-md-12">
@@ -140,13 +140,11 @@
 				<div class="text-center">
 					<div class="col-md-12">
 						<div class="balloon-y">
-							<b>Домоуправител</b>: Сотир Сотиров, 0888 58 08 03<br/>
-							<b>Касиер</b>: Боряна Балканска, 0899 49 48 14<br/>
-							<b>Пом. касиер</b>: Александрина Георгиева<br/>
-							<b>Пом. касиер</b>: Николай Миков<br/>
-							<b>Чипове и камери</b>: Цветелин Крумов<br/>
-							<b>ИТ</b>: Мирослав Джоканов<br/>
-							<b>ВиК</b>: Александър Тодоров<br/>
+							<b>Домоуправител</b>: <span class="small">Сотир Сотиров, 0888 58 08 03</span><br/><br/>
+							<b>Касиер</b>: <span class="small">Боряна Балканска, 0899 49 48 14</span><br/><br/>
+							<b>Пом. касиер</b>: <span class="small">Александрина Георгиева</span><br/><br/>
+							<b>Пом. касиер</b>: <span class="small">Николай Миков</span><br/><br/>
+							<b>Чипове и камери</b>: <span class="small">Цветелин Крумов</span>
 						</div>
 					</div>
 				</div>
@@ -154,10 +152,5 @@
         </div>
     </div>
 </section>
-
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.7.3/feather.min.js"></script>
-<script src="js/scripts.js"></script>
 </body>
 </html>
