--- a/index.html
+++ b/index.html
@@ -1,156 +1,156 @@
 <!doctype html>
 <html lang="bg">
 <head>
-    <meta charset="utf-8">
-    <meta name="robots" content="noindex, nofollow">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Русалийски Проход 10</title>
-    <meta name="description" content="Етажна собственост - Русалийски проход 10"/>
-    <link rel="icon" type="image/jpg" href="icon/favicon.ico"/>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/custom.css">
+ <meta charset="utf-8">
+ <meta name="robots" content="noindex, nofollow">
+ <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ <title>Русалийски Проход 10</title>
+ <meta name="description" content="Етажна собственост - Русалийски проход 10"/>
+ <link rel="icon" type="image/jpg" href="icon/favicon.ico"/>
+ <link rel="stylesheet" href="css/bootstrap.min.css">
+ <style>
+ div.balloon{
+	text-align:left;
+	padding:1em;
+	background:#ffffff;
+	border-radius: 0.3em;
+}
+div.balloon.balloon-y{
+	background:#ffff00;
+}
+ </style>
 </head>
 <body>
-
-<section class="bg-gradient pt-5 pb-6">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 d-flex flex-row align-items-center justify-content-between">
-                <div class="heading-brand">Русалийски 10</div>
-                <a href="#payment" class="btn btn-dark">Плати</a>
-            </div>
-        </div>
-        <div class="row mt-6">
-            <div class="col-md-8 mx-auto text-center">
-                <h1><a id="debt">1. Как да разбера колко дължа на ЕС?</a></h1>
-                <p class="lead mb-2">Дължимата сума може да се разбере по един от следните начини:</p>
-				<div class="text-center">
-					<div class="lead"><h4>** Инсталирайте Homie **</h4></div>
-					<div class="col-md-12">
-						<div class="balloon-w">
-							<b>Стъпка 1</b>: Инсталирайте <a href="https://homie.bg/" target="_blank"><u>Homie</u></a><br/>
-							<b>Стъпка 2</b>: Регистрирайте се като потребител<br/>
-							<b>Стъпка 3</b>: Въведете партидния номер на вашия апартамент
-						</div>
-					</div>
-
-					<div class="lead mt-3"><h4>** Свържете се с касиера **</h4></div>
-					<div class="col-md-12">
-						<div class="balloon-w">
-							<b>Касиер</b>: Боряна Балканска<br/>
-							<b>Тел.</b>: 0899 49 48 14
-						</div>
-					</div>
-				</div>
-            </div>
-        </div>
+<section class="bg-gradient py-5">
+ <div class="container">
+  <div class="row">
+   <div class="col-12 d-flex flex-row align-items-center justify-content-between">
+    <div class="heading-brand">Русалийски 10</div>
+    <a href="#payment" class="btn btn-dark">Плати</a>
+   </div>
+  </div>
+  <div class="row mt-6">
+   <div class="col-md-8 mx-auto text-center">
+    <h1><a id="debt">1. Как да разбера колко дължа на ЕС?</a></h1>
+    <p class="lead mb-2">Дължимата сума може да се разбере по един от следните начини:</p>
+    <div class="text-center">
+     <div class="lead"><h4>** Инсталирайте Homie **</h4></div>
+     <div class="col-md-12">
+      <div class="balloon">
+       <b>Стъпка 1</b>: Инсталирайте <a href="https://homie.bg/" target="_blank"><u>Homie</u></a><br/>
+       <b>Стъпка 2</b>: Регистрирайте се като потребител<br/>
+       <b>Стъпка 3</b>: Въведете партидния номер на вашия апартамент
+      </div>
+     </div>
+     <div class="lead mt-3"><h4>** Свържете се с касиера **</h4></div>
+     <div class="col-md-12">
+      <div class="balloon">
+       <b>Касиер</b>: Боряна Балканска<br/>
+       <b>Тел.</b>: <a href="tel:+359899494814">0899 49 48 14</a>
+      </div>
+     </div>
     </div>
+   </div>
+  </div>
+ </div>
 </section>
-
 <section class="py-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 mx-auto text-center">
-                <h1><a id="payment">2. Как да си платя входната такса?</a></h1>
-                <p class="lead mb-2">Таксите за входа се плащат <b><u>ежемесечно</u></b>. Плащането може да се случи по един от следните начини:</p>
-				<div class="text-center">
-					<div class="lead"><h4>** Банков превод **</h4></div>
-					<div class="col-md-12">
-						<div class="balloon-y">
-							<b>Получател</b>: Боряна Балканска<br/>
-							<b>IBAN</b>: <br/>
-							<b>Основание</b>: Вх. такса ап. ХХ, месец ХХ
-						</div>
-					</div>
-
-					<div class="lead mt-3"><h4>** Изипей каса **</h4></div>
-					<div class="col-md-12">
-						<div class="balloon-y">
-							<b>Получател</b>: Боряна Балканска<br/>
-							<b>КИН</b>: <br/>
-							<b>Основание</b>: Вх. такса ап. ХХ, месец ХХ
-						</div>
-					</div>
-
-					<div class="lead"><h4>** Банкомат **</h4></div>
-					<div class="col-md-12">
-						<div class="balloon-y">
-							<b>B-Pay код</b>: 15005<br/>
-							<b>ЕГН</b>: 8601257577<br/>
-							<b>Инструкции</b>: <a href="https://www.epay.bg/v3main/front?p=b_pay" target="_blank">B Pay</a>
-						</div>
-					</div>
-					<div class="lead"><h4>** На ръка **</h4></div>
-					<div class="col-md-12">
-						<div class="balloon-y">
-							<b>Къде</b>: вх. Б, ап. 33<br/>
-							<b>Кога</b>: от 1-о до 3-о число всеки месец<br/>
-							<b>Тел.</b>: 0899 49 48 14
-						</div>
-					</div>
-				</div>
-            </div>
-        </div>
+ <div class="container">
+  <div class="row">
+   <div class="col-md-8 mx-auto text-center">
+    <h1><a id="payment">2. Как да си платя входната такса?</a></h1>
+    <p class="lead mb-2">Таксите за входа се плащат <b><u>ежемесечно</u></b>. Плащането може да се случи по един от следните начини:</p>
+    <div class="text-center">
+     <div class="lead mt-3"><h4>** Банков превод **</h4></div>
+     <div class="col-md-12">
+      <div class="balloon balloon-y">
+       <b>Получател</b>: Боряна Балканска<br/>
+       <b>IBAN</b>: <br/>
+       <b>Основание</b>: Вх. такса ап. ХХ, месец ХХ
+      </div>
+     </div>
+     <div class="lead mt-3"><h4>** Изипей каса **</h4></div>
+     <div class="col-md-12">
+      <div class="balloon balloon-y">
+       <b>Получател</b>: Боряна Балканска<br/>
+       <b>КИН</b>: <br/>
+       <b>Основание</b>: Вх. такса ап. ХХ, месец ХХ
+      </div>
+     </div>
+     <div class="lead mt-3"><h4>** Банкомат **</h4></div>
+     <div class="col-md-12">
+      <div class="balloon balloon-y">
+       <b>B-Pay код</b>: 15005<br/>
+       <b>ЕГН</b>: 8601257577<br/>
+       <b>Инструкции</b>: <a href="https://www.epay.bg/v3main/front?p=b_pay" target="_blank">B Pay</a>
+      </div>
+     </div>
+     <div class="lead mt-3"><h4>** На ръка **</h4></div>
+     <div class="col-md-12">
+      <div class="balloon balloon-y">
+       <b>Къде</b>: вх. Б, ап. 33<br/>
+       <b>Кога</b>: от 1-о до 3-о число всеки месец<br/>
+       <b>Тел.</b>: <a href="tel:+359899494814">0899 49 48 14</a>
+      </div>
+     </div>
     </div>
+   </div>
+  </div>
+ </div>
 </section>
-
-<section class="bg-gradient pt-5 pb-6">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 mx-auto text-center">
-                <h1><a id="communication">3. Как се осъществява комуникацията в блока?</a></h1>
-				<div class="text-center">
-					<div class="lead"><h4>** Viber **</h4></div>
-					<div class="col-md-12">
-						<div class="balloon-w">
-							<b>Стъпка 1</b>: Инсталирайте <a href="https://www.viber.com/" target="_blank"><u>Viber</u></a><br/>
-							<b>Стъпка 2</b>: Поискайте достъп до групата
-						</div>
-					</div>
-
-					<div class="lead mt-3"><h4>** Homie **</h4></div>
-					<div class="col-md-12">
-						<div class="balloon-w">
-							<b>Стъпка 1</b>: Инсталирайте <a href="https://homie.bg/" target="_blank"><u>Homie</u></a><br/>
-							<b>Стъпка 2</b>: Регистрирайте се като потребител<br/>
-							<b>Стъпка 3</b>: Въведете партидния номер на вашия апартамент
-						</div>
-					</div>
-
-					<div class="lead mt-3"><h4>** Drive **</h4></div>
-					<p class="lead mb-2">Решения на ОС, финансови, ВиК отчети може да се открият тук:</p>
-				
-					<div class="col-md-12">
-						<div class="balloon-w">
-							<b>Google Drive</b>: Виж <a href="" target="_blank"><u>ТУК</u></a>
-						</div>
-					</div>
-				</div>
-            </div>
-        </div>
+<section class="bg-gradient py-5">
+ <div class="container">
+  <div class="row">
+   <div class="col-md-8 mx-auto text-center">
+    <h1><a id="communication">3. Как се осъществява комуникацията в блока?</a></h1>
+    <div class="text-center">
+     <div class="lead"><h4>** Viber **</h4></div>
+     <div class="col-md-12">
+      <div class="balloon">
+       <b>Стъпка 1</b>: Инсталирайте <a href="https://www.viber.com/" target="_blank"><u>Viber</u></a><br/>
+       <b>Стъпка 2</b>: Поискайте достъп до групата
+      </div>
+     </div>
+     <div class="lead mt-3"><h4>** Homie **</h4></div>
+     <div class="col-md-12">
+      <div class="balloon">
+       <b>Стъпка 1</b>: Инсталирайте <a href="https://homie.bg/" target="_blank"><u>Homie</u></a><br/>
+       <b>Стъпка 2</b>: Регистрирайте се като потребител<br/>
+       <b>Стъпка 3</b>: Въведете партидния номер на вашия апартамент
+      </div>
+     </div>
+     <div class="lead mt-3"><h4>** Drive **</h4></div>
+     <p class="lead mb-2">Решения на ОС, финансови, ВиК отчети може да се открият тук:</p>
+     <div class="col-md-12">
+      <div class="balloon">
+       <b>Google Drive</b>: Виж <a href="" target="_blank"><u>ТУК</u></a>
+      </div>
+     </div>
     </div>
+   </div>
+  </div>
+ </div>
 </section>
-
 <section class="py-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 mx-auto text-center">
-                <h1><a id="payment">4. Контакти</a></h1>
-                <p class="lead mb-2">Ако някой желае да се включи в екипа, нека се свърже с:</p>
-				<div class="text-center">
-					<div class="col-md-12">
-						<div class="balloon-y">
-							<b>Домоуправител</b>: <span class="small">Сотир Сотиров, 0888 58 08 03</span><br/><br/>
-							<b>Касиер</b>: <span class="small">Боряна Балканска, 0899 49 48 14</span><br/><br/>
-							<b>Пом. касиер</b>: <span class="small">Александрина Георгиева</span><br/><br/>
-							<b>Пом. касиер</b>: <span class="small">Николай Миков</span><br/><br/>
-							<b>Чипове и камери</b>: <span class="small">Цветелин Крумов</span>
-						</div>
-					</div>
-				</div>
-            </div>
-        </div>
+ <div class="container">
+  <div class="row">
+   <div class="col-md-8 mx-auto text-center">
+    <h1><a id="contact">4. Контакти</a></h1>
+    <p class="lead mb-2">Ако някой желае да се включи в екипа, нека се свърже с:</p>
+    <div class="text-center">
+     <div class="col-md-12">
+      <div class="balloon balloon-y">
+       <b>Домоуправител</b>: <span class="small">Сотир Сотиров, <a href="tel:+359888580803">0888 58 08 03</a></span><br/><br/>
+       <b>Касиер</b>: <span class="small">Боряна Балканска, <a href="tel:+359899494814">0899 49 48 14</a></span><br/><br/>
+       <b>Пом. касиер</b>: <span class="small">Александрина Георгиева</span><br/><br/>
+       <b>Пом. касиер</b>: <span class="small">Николай Миков</span><br/><br/>
+       <b>Чипове и камери</b>: <span class="small">Цветелин Крумов</span>
+      </div>
+     </div>
     </div>
+   </div>
+  </div>
+ </div>
 </section>
 </body>
 </html>
