--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ div.balloon.balloon-y{
       <div class="balloon">
        <b>Стъпка 1</b>: Инсталирайте <a href="https://homie.bg/" target="_blank"><u>Homie</u></a><br/>
        <b>Стъпка 2</b>: Регистрирайте се като потребител<br/>
-       <b>Стъпка 3</b>: Въведете партидния номер на вашия апартамент
+       <b>Стъпка 3</b>: Въведете персонален код на Вашия апартамент. То е във вид <b>10001490ХХ</b>, където ХХ е номерът на апартамента Ви (напр. ако сте <b>ап. 9</b>, вашият код "<b>1000149009</b>").
       </div>
      </div>
      <div class="lead mt-3"><h4>** Свържете се с касиера **</h4></div>
@@ -65,7 +65,7 @@ div.balloon.balloon-y{
      <div class="col-md-12">
       <div class="balloon balloon-y">
        <b>Получател</b>: Боряна Балканска<br/>
-       <b>IBAN</b>: <br/>
+       <b>IBAN</b>: BG46ESPY40040016710767<br/>
        <b>Основание</b>: Вх. такса ап. ХХ, месец ХХ
       </div>
      </div>
@@ -73,7 +73,7 @@ div.balloon.balloon-y{
      <div class="col-md-12">
       <div class="balloon balloon-y">
        <b>Получател</b>: Боряна Балканска<br/>
-       <b>КИН</b>: <br/>
+       <b>КИН</b>: 3441951627<br/>
        <b>Основание</b>: Вх. такса ап. ХХ, месец ХХ
       </div>
      </div>
@@ -116,7 +116,7 @@ div.balloon.balloon-y{
       <div class="balloon">
        <b>Стъпка 1</b>: Инсталирайте <a href="https://homie.bg/" target="_blank"><u>Homie</u></a><br/>
        <b>Стъпка 2</b>: Регистрирайте се като потребител<br/>
-       <b>Стъпка 3</b>: Въведете партидния номер на вашия апартамент
+       <b>Стъпка 3</b>: Въведете персонален код на Вашия апартамент. То е във вид <b>10001490ХХ</b>, където ХХ е номерът на апартамента Ви (напр. ако сте <b>ап. 9</b>, вашият код "<b>1000149009</b>").
       </div>
      </div>
      <div class="lead mt-3"><h4>** Drive **</h4></div>
@@ -144,7 +144,8 @@ div.balloon.balloon-y{
        <b>Касиер</b>: <span class="small">Боряна Балканска, <a href="tel:+359899494814">0899 49 48 14</a></span><br/><br/>
        <b>Пом. касиер</b>: <span class="small">Александрина Георгиева</span><br/><br/>
        <b>Пом. касиер</b>: <span class="small">Николай Миков</span><br/><br/>
-       <b>Чипове и камери</b>: <span class="small">Цветелин Крумов</span>
+       <b>Чипове и камери</b>: <span class="small">Цветелин Крумов</span><br/><br/>
+       <b>ИТ</b>: <span class="small">Мирослав Джоканов</span>
       </div>
      </div>
     </div>
