Make Ceco's phone clickable

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ div.balloon.balloon-y{
        <b>Касиер</b>: <span class="small">Боряна Балканска, <a href="tel:+359899494814">0899 49 48 14</a></span><br/><br/>
        <b>Пом. касиер</b>: <span class="small">Александрина Георгиева</span><br/><br/>
        <b>Пом. касиер</b>: <span class="small">Николай Миков</span><br/><br/>
-       <b>Чипове и камери</b>: <span class="small">Цветелин Крумов, 0882 41 05 00</span><br/><br/>
+       <b>Чипове и камери</b>: <span class="small">Цветелин Крумов, <a href="tel:+359882410500">0882 41 05 00</a></span></span><br/><br/>
        <b>ИТ</b>: <span class="small">Мирослав Джоканов</span>
       </div>
      </div>
