Performance improvement - async the bootstrap.css loading with minor JS trick

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
  <title>Русалийски Проход 10</title>
  <meta name="description" content="Етажна собственост - Русалийски проход 10"/>
  <link rel="icon" type="image/jpg" href="icon/favicon.ico"/>
- <link rel="stylesheet" href="css/bootstrap.min.css">
+
+ <link href="css/bootstrap.min.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
+ <noscript><link rel="stylesheet" href="css/bootstrap.min.css"></noscript>
+
  <style>
  div.balloon{
 	text-align:left;
