Revert last change due to UX degradation

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
  <title>Русалийски Проход 10</title>
  <meta name="description" content="Етажна собственост - Русалийски проход 10"/>
  <link rel="icon" type="image/jpg" href="icon/favicon.ico"/>
-
- <link href="css/bootstrap.min.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
- <noscript><link rel="stylesheet" href="css/bootstrap.min.css"></noscript>
-
+ <link rel="stylesheet" href="css/bootstrap.min.css">
  <style>
  div.balloon{
 	text-align:left;
