--- a/index.html
+++ b/index.html
@@ -12,146 +12,290 @@
  div.balloon{
 	text-align:left;
 	padding:1em;
-	background:#ffffff;
+	background:#ffff0042;
 	border-radius: 0.3em;
 }
-div.balloon.balloon-y{
-	background:#ffff00;
+.lead-2{
+	font-size:1rem;
+	font-weight:400
+}
+.accordion {
+  background-color: #000;
+  color: #fff;
+  cursor: pointer;
+  padding: 12px;
+  width: 100%;
+  text-align: left;
+  outline: none;
+  transition: 0.5s;
+  font-size:18px;
+  border-top:1px #ff0 solid;
+}
+.active, .accordion:hover {
+  background-color: #000000c2;
+}
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  display: none;
+  overflow: hidden;
+}
+.accordion:after {
+  content: '\023EC';
+  font-size: 18px;
+  float: right;
+  margin-left: 5px;
+}
+.active:after {
+  content: "\023EB";
+}
+.header-iconify:before {
+  content: "\026A1"; /* Unicode character for "minus" sign (-) */
 }
  </style>
 </head>
 <body>
 <section class="bg-gradient py-5">
  <div class="container">
+
   <div class="row">
    <div class="col-12 d-flex flex-row align-items-center justify-content-between">
     <div class="heading-brand">Русалийски 10</div>
-    <a href="#payment" class="btn btn-dark">Плати</a>
+    <a href="#payment" class="btn btn-dark" id="pay-btn">Плати</a>
    </div>
   </div>
+
   <div class="row mt-6">
-   <div class="col-md-8 mx-auto text-center">
-    <h1><a id="debt">1. Как да разбера колко дължа на ЕС?</a></h1>
-    <p class="lead mb-2">Дължимата сума може да се разбере по един от следните начини:</p>
-    <div class="text-center">
-     <div class="lead"><h4>** Инсталирайте Homie **</h4></div>
-     <div class="col-md-12">
-      <div class="balloon">
-       <b>Стъпка 1</b>: Инсталирайте <a href="https://homie.bg/" target="_blank"><u>Homie</u></a><br/>
-       <b>Стъпка 2</b>: Регистрирайте се като потребител<br/>
-       <b>Стъпка 3</b>: Въведете персонален код на Вашия апартамент. То е във вид <b>10001490ХХ</b>, където ХХ е номерът на апартамента Ви (напр. ако сте <b>ап. 9</b>, вашият код "<b>1000149009</b>").
-      </div>
-     </div>
-     <div class="lead mt-3"><h4>** Свържете се с касиера **</h4></div>
-     <div class="col-md-12">
-      <div class="balloon">
-       <b>Касиер</b>: Боряна Балканска<br/>
-       <b>Тел.</b>: <a href="tel:+359899494814">0899 49 48 14</a>
-      </div>
-     </div>
+   <div class="col-md-8 mx-auto text-center pl-0 pr-0">
+	<button class="accordion" id="debt">Как да разбера колко дължа?</button>
+	<div class="panel">
+	 <p class="lead-2 mb-2">Дължимата сума може да се разбере по един от следните начини:</p>
+	 <div class="text-center">
+	  <div class="lead-2"><h6 class="header-iconify">Инсталирайте Homie</h6></div>
+	  <div class="col-md-12">
+	   <div class="balloon">
+	    <b>Стъпка 1</b>: Инсталирайте <a href="https://homie.bg/" target="_blank"><u>Homie</u></a><br/>
+	    <b>Стъпка 2</b>: Регистрирайте се като потребител<br/>
+	    <b>Стъпка 3</b>: Въведете персонален код на Вашия апартамент. То е във вид <b>10001490ХХ</b>, където ХХ е номерът на апартамента Ви (напр. ако сте <b>ап. 9</b>, вашият код "<b>1000149009</b>").
+	   </div>
+	  </div>
+	  <div class="lead-2 mt-3"><h6 class="header-iconify">Свържете се с касиера</h6></div>
+	  <div class="col-md-12">
+	   <div class="balloon mb-3">
+	    <b>Касиер</b>: Боряна Балканска<br/>
+	    <b>Тел.</b>: <a href="tel:+359899494814">0899 49 48 14</a>
+	   </div>
+	  </div>
+	 </div>
     </div>
    </div>
   </div>
- </div>
-</section>
-<section class="py-5">
- <div class="container">
+  
   <div class="row">
-   <div class="col-md-8 mx-auto text-center">
-    <h1><a id="payment">2. Как да си платя входната такса?</a></h1>
-    <p class="lead mb-2">Таксите за входа се плащат <b><u>ежемесечно</u></b>. Плащането може да се случи по един от следните начини:</p>
-    <div class="text-center">
-     <div class="lead mt-3"><h4>** Банков превод **</h4></div>
-     <div class="col-md-12">
-      <div class="balloon balloon-y">
-       <b>Получател</b>: Боряна Балканска<br/>
-       <b>IBAN</b>: BG46ESPY40040016710767<br/>
-       <b>Основание</b>: Вх. такса ап. ХХ, месец ХХ
+   <div class="col-md-8 mx-auto text-center pl-0 pr-0">
+    <button class="accordion" id="payment">Как да си платя входната такса?</button>
+	<div class="panel">
+     <p class="lead-2 mb-2">Таксите за входа се плащат <b><u>ежемесечно</u></b>. Плащането може да се случи по един от следните начини:</p>
+     <div class="text-center">
+      <div class="lead-2 mt-3"><h6 class="header-iconify">Банков превод</h6></div>
+      <div class="col-md-12">
+       <div class="balloon">
+        <b>Получател</b>: Боряна Балканска<br/>
+        <b>IBAN</b>: BG46ESPY40040016710767<br/>
+        <b>Основание</b>: Вх. такса ап. Х, месец Х
+       </div>
       </div>
-     </div>
-     <div class="lead mt-3"><h4>** Изипей каса **</h4></div>
-     <div class="col-md-12">
-      <div class="balloon balloon-y">
-       <b>Получател</b>: Боряна Балканска<br/>
-       <b>КИН</b>: 3441951627<br/>
-       <b>Основание</b>: Вх. такса ап. ХХ, месец ХХ
+      <div class="lead-2 mt-3"><h6 class="header-iconify">Изипей каса</h6></div>
+      <div class="col-md-12">
+       <div class="balloon">
+        <b>Получател</b>: Боряна Балканска<br/>
+        <b>КИН</b>: 3441951627<br/>
+        <b>Основание</b>: Вх. такса ап. Х, месец Х
+       </div>
       </div>
-     </div>
-     <div class="lead mt-3"><h4>** Банкомат **</h4></div>
-     <div class="col-md-12">
-      <div class="balloon balloon-y">
-       <b>B-Pay код</b>: 15005<br/>
-       <b>ЕГН</b>: 8601257577<br/>
-       <b>Инструкции</b>: <a href="https://www.epay.bg/v3main/front?p=b_pay" target="_blank">B Pay</a>
-      </div>
-     </div>
-     <div class="lead mt-3"><h4>** На ръка **</h4></div>
-     <div class="col-md-12">
-      <div class="balloon balloon-y">
-       <b>Къде</b>: вх. Б, ап. 33<br/>
-       <b>Кога</b>: от 1-о до 3-о число всеки месец<br/>
-       <b>Тел.</b>: <a href="tel:+359899494814">0899 49 48 14</a>
+      <div class="lead-2 mt-3"><h6 class="header-iconify">На ръка</h6></div>
+      <div class="col-md-12">
+       <div class="balloon mb-3">
+        <b>Къде</b>: вх. Б, ап. 33<br/>
+        <b>Кога</b>: от 1-о до 3-о число<br/>
+        <b>Тел.</b>: <a href="tel:+359899494814">0899 49 48 14</a>
+       </div>
       </div>
      </div>
     </div>
    </div>
   </div>
- </div>
-</section>
-<section class="bg-gradient py-5">
- <div class="container">
+  
   <div class="row">
-   <div class="col-md-8 mx-auto text-center">
-    <h1><a id="communication">3. Как се осъществява комуникацията в блока?</a></h1>
-    <div class="text-center">
-     <div class="lead"><h4>** Viber **</h4></div>
-     <div class="col-md-12">
-      <div class="balloon">
-       <b>Стъпка 1</b>: Инсталирайте <a href="https://www.viber.com/" target="_blank"><u>Viber</u></a><br/>
-       <b>Стъпка 2</b>: Поискайте достъп до групата
-      </div>
-     </div>
-     <div class="lead mt-3"><h4>** Homie **</h4></div>
-     <div class="col-md-12">
-      <div class="balloon">
-       <b>Стъпка 1</b>: Инсталирайте <a href="https://homie.bg/" target="_blank"><u>Homie</u></a><br/>
-       <b>Стъпка 2</b>: Регистрирайте се като потребител<br/>
-       <b>Стъпка 3</b>: Въведете персонален код на Вашия апартамент. То е във вид <b>10001490ХХ</b>, където ХХ е номерът на апартамента Ви (напр. ако сте <b>ап. 9</b>, вашият код "<b>1000149009</b>").
-      </div>
-     </div>
-     <div class="lead mt-3"><h4>** Drive **</h4></div>
-     <p class="lead mb-2">Решения на ОС, финансови, ВиК отчети може да се открият тук:</p>
-     <div class="col-md-12">
-      <div class="balloon">
-       <b>Google Drive</b>: Виж <a href="https://drive.google.com/drive/folders/1sxM_H0l_-TVJakKsMd7O1QWuzyvNcS79" target="_blank"><u>ТУК</u></a>
-      </div>
-     </div>
+   <div class="col-md-8 mx-auto text-center pl-0 pr-0">
+    <button class="accordion">Плаща ли се за деца?</button>
+    <div class="panel">
+      <p class="mt-3">
+	  Ако детето има 6 навършени години, то се третира като <b>пълноправен член</b> на домакинството.<br/>
+	  <hr>
+	  <div class="balloon mb-3">
+	   <i>Чл. 51. (2) Не се заплащат разходите по ал. 1 или ал. 9, т. 1 за деца, ненавършили 6-годишна възраст.</i>
+	  </div>
+	  </p>
     </div>
    </div>
   </div>
- </div>
-</section>
-<section class="py-5">
- <div class="container">
+  
   <div class="row">
-   <div class="col-md-8 mx-auto text-center">
-    <h1><a id="contact">4. Контакти</a></h1>
-    <p class="lead mb-2">Ако някой желае да се включи в екипа, нека се свърже с:</p>
-    <div class="text-center">
-     <div class="col-md-12">
-      <div class="balloon balloon-y">
-       <b>Домоуправител</b>: <span class="small">Сотир Сотиров, <a href="tel:+359888580803">0888 58 08 03</a></span><br/><br/>
-       <b>Касиер</b>: <span class="small">Боряна Балканска, <a href="tel:+359899494814">0899 49 48 14</a></span><br/><br/>
-       <b>Пом. касиер</b>: <span class="small">Александрина Георгиева</span><br/><br/>
-       <b>Пом. касиер</b>: <span class="small">Николай Миков</span><br/><br/>
-       <b>Чипове и камери</b>: <span class="small">Цветелин Крумов, <a href="tel:+359882410500">0882 41 05 00</a></span></span><br/><br/>
-       <b>ИТ</b>: <span class="small">Мирослав Джоканов</span>
+   <div class="col-md-8 mx-auto text-center pl-0 pr-0">
+    <button class="accordion">Плаща ли се за животни?</button>
+    <div class="panel">
+      <p class="mt-3">
+	  Само за кучета - <b>по 4лв/месец</b>.<br/>
+	  <hr>
+	  <div class="balloon mb-3">
+	   <i>Чл. 51. (7) Собственици, ползватели и обитатели, които отглеждат в етажната собственост животни, подлежащи на извеждане, заплащат разходи по ал. 1 или ал. 9, т. 1 за електрическа енергия, вода, отопление, почистване на общите части и абонаментно обслужване на асансьора за всяко животно в размер като за един обитател.</i>
+	  </div>
+	  </p>
+    </div>
+   </div>
+  </div>
+  
+  <div class="row">
+   <div class="col-md-8 mx-auto text-center pl-0 pr-0">
+    <button class="accordion">Плаща ли се за гараж?</button>
+    <div class="panel">
+      <p class="mt-3">
+	  Да - <b>по 5лв/месец</b>.<br/>
+	  <hr>
+	  <div class="balloon">
+	   <i>Чл. 6. (2) Ползвателите на самостоятелни обекти в сграда в режим на етажна собственост имат задълженията по ал. 1, с изключение на тези по ал. 1, т. 9 (фонд "Ремонт").</i>
+	  </div>
+	  <hr>
+	  <div class="balloon mb-3">
+	   <i>ДР § 1. 1. "Самостоятелен обект" е обособена част от сграда в режим на етажна собственост със самостоятелно функционално предназначение.</i>
+	  </div>
+	  </p>
+    </div>
+   </div>
+  </div>
+  
+  <div class="row">
+   <div class="col-md-8 mx-auto text-center pl-0 pr-0">
+    <button class="accordion">Ами ако не ползвам обекта?</button>
+    <div class="panel">
+      <p class="mt-3">
+	  Ако не ползвате обекта, пак плащате. В този случай Ви се начислява такса като за <b>1 обитател</b>.<br/>
+	  <hr>
+	  <div class="balloon mb-3">
+	   <i> Разходите за управление и разходите за поддържане на общите части на етажната собственост се разпределят поравно според броя на собствениците, ползвателите и обитателите и членовете на техните домакинства независимо от етажа, на който живеят. За самостоятелен обект, в който се пребивава не повече от 30 дни в рамките на една календарна година, се заплащат разходите за управление и разходите за поддържане в размера, който е определен за един собственик, ползвател или обитател.</i>
+	  </div>
+	  </p>
+    </div>
+   </div>
+  </div>
+  
+  <div class="row">
+   <div class="col-md-8 mx-auto text-center pl-0 pr-0">
+    <button class="accordion">Какво се случва, ако не платя?</button>
+    <div class="panel">
+      <p class="mt-3">
+	  Начисляват се <b>наказателни лихви</b> за всяко закъснение. При системно неплащане се преминава към <b>съдебна процедура</b>.<br/>
+	  <hr>
+	  <div class="balloon mb-3">
+	   <i>Чл. 6. (1) Собствениците са длъжни да:<br/><br/>
+	    8. изпълняват решенията на органите на управление на етажната собственост;<br/><br/>
+	    9. заплащат разходите за ремонт, реконструкция, преустройство, основен ремонт и основно обновяване на общите части на сградата, подмяна на общи инсталации или оборудване и вноските, определени за фонд "Ремонт и обновяване", съразмерно с притежаваните идеални части;<br/><br/>
+        10. заплащат разходите за управлението и разходите за поддържането на общите части на сградата;
+	   </i>
+	  </div>
+	  </p>
+    </div>
+   </div>
+  </div>
+  
+  <div class="row">
+   <div class="col-md-8 mx-auto text-center pl-0 pr-0">
+    <button class="accordion">Как комуникираме в блока?</button>
+	<div class="panel">
+     <div class="text-center">
+      <div class="lead-2 mt-3"><h6 class="header-iconify">Viber</h6></div>
+      <div class="col-md-12">
+       <div class="balloon">
+        <b>Стъпка 1</b>: Инсталирайте <a href="https://www.viber.com/" target="_blank"><u>Viber</u></a><br/>
+        <b>Стъпка 2</b>: Поискайте достъп до групата
+       </div>
+      </div>
+      <div class="lead-2 mt-3"><h6 class="header-iconify">Homie</h6></div>
+      <div class="col-md-12">
+       <div class="balloon mb-3">
+        <b>Стъпка 1</b>: Инсталирайте <a href="https://homie.bg/" target="_blank"><u>Homie</u></a><br/>
+        <b>Стъпка 2</b>: Регистрирайте се като потребител<br/>
+        <b>Стъпка 3</b>: Въведете персонален код на Вашия апартамент. То е във вид <b>10001490ХХ</b>, където ХХ е номерът на апартамента Ви (напр. ако сте <b>ап. 9</b>, вашият код "<b>1000149009</b>").
+       </div>
       </div>
      </div>
     </div>
    </div>
   </div>
+  
+  <div class="row">
+   <div class="col-md-8 mx-auto text-center pl-0 pr-0">
+    <button class="accordion">Къде съхраняваме документите?</button>
+	<div class="panel">
+     <div class="text-center">
+      <div class="lead-2 mt-3"><h6 class="header-iconify">Google Drive</h6></div>
+      <p class="lead-2 mb-2">Решения на ОС, финансови и ВиК отчети може да се открият тук:</p>
+      <div class="col-md-12">
+       <div class="balloon mb-3">
+        <b>Google Drive</b>: Виж <a href="https://drive.google.com/drive/folders/1sxM_H0l_-TVJakKsMd7O1QWuzyvNcS79" target="_blank"><u>ТУК</u></a>
+       </div>
+      </div>
+     </div>
+    </div>
+   </div>
+  </div>
+  
+  <div class="row">
+   <div class="col-md-8 mx-auto text-center pl-0 pr-0">
+   <button class="accordion">Контакти</button>
+   <div class="panel">
+     <div class="text-center">
+      <div class="col-md-12">
+       <div class="balloon mb-3 mt-3">
+        <b>Домоуправител</b>: <span class="small"><br/>Сотир Сотиров, <a href="tel:+359888580803">0888 58 08 03</a></span><br/><br/>
+        <b>Касиер</b>: <span class="small"><br/>Боряна Балканска, <a href="tel:+359899494814">0899 49 48 14</a></span><br/><br/>
+        <b>Чипове и камери</b>: <span class="small"><br/>Цветелин Крумов, <a href="tel:+359882410500">0882 41 05 00</a></span></span><br/><br/>
+        <b>ИТ</b>: <span class="small"><br/>Мирослав Джоканов, <a href="tel:+359885358308">0885 35 83 08</a></span>
+       </div>
+      </div>
+     </div>
+    </div>
+   </div>
+  </div>
+
  </div>
 </section>
+  
 </body>
+<script type="text/javascript" defer="defer">
+var acc = document.getElementsByClassName("accordion");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+  acc[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+
+    var panel = this.nextElementSibling;
+    if (panel.style.display === "block") {
+      panel.style.display = "none";
+    } else {
+      panel.style.display = "block";
+    }
+  });
+}
+
+var payBtn = document.getElementById("pay-btn");
+payBtn.addEventListener("click", function() {
+	var paymentAcc = document.getElementById("payment");
+	if (!paymentAcc.classList.contains("active")) {
+		paymentAcc.click();
+	}
+  });
+</script>
 </html>
