--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 }
  </style>
 </head>
-<body>
-<section class="bg-gradient py-5">
+<body class="bg-gradient py-5">
  <div class="container">
 
   <div class="row">
@@ -270,7 +269,6 @@
   </div>
 
  </div>
-</section>
   
 </body>
 <script type="text/javascript" defer="defer">
