Minor bug fixes.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <div class="row">
    <div class="col-12 d-flex flex-row align-items-center justify-content-between">
-    <div class="heading-brand">Русалийски 10</div>
+    <a href="https://rusal.pro/"><div class="heading-brand">Русалийски 10</div></a>
     <a href="#payment" class="btn btn-dark" id="pay-btn">Плати</a>
    </div>
   </div>
@@ -68,7 +68,7 @@
    <div class="col-md-8 mx-auto text-center pl-0 pr-0">
 	<button class="accordion" id="debt">Как да разбера колко дължа?</button>
 	<div class="panel">
-	 <p class="lead-2 mb-2">Дължимата сума може да се разбере по един от следните начини:</p>
+	 <p class="lead-2 mb-2 mt-3">Дължимата сума може да се разбере по един от следните начини:</p>
 	 <div class="text-center">
 	  <div class="lead-2"><h6 class="header-iconify">Инсталирайте Homie</h6></div>
 	  <div class="col-md-12">
@@ -94,14 +94,15 @@
    <div class="col-md-8 mx-auto text-center pl-0 pr-0">
     <button class="accordion" id="payment">Как да си платя входната такса?</button>
 	<div class="panel">
-     <p class="lead-2 mb-2">Таксите за входа се плащат <b><u>ежемесечно</u></b>. Плащането може да се случи по един от следните начини:</p>
+     <p class="lead-2 mb-2 mt-3">Таксите за входа се плащат <b><u>ежемесечно</u></b>. Плащането може да се случи по един от следните начини:</p>
      <div class="text-center">
       <div class="lead-2 mt-3"><h6 class="header-iconify">Банков превод</h6></div>
       <div class="col-md-12">
        <div class="balloon">
         <b>Получател</b>: Боряна Балканска<br/>
         <b>IBAN</b>: BG46ESPY40040016710767<br/>
-        <b>Основание</b>: Вх. такса ап. Х, месец Х
+        <b>Основание</b>: Вх. такса ап. Х, месец Х<br/>
+        <b>Такса</b>: 0.00 - 1.20лв (според условията на банката ви)
        </div>
       </div>
       <div class="lead-2 mt-3"><h6 class="header-iconify">Изипей каса</h6></div>
@@ -109,7 +110,8 @@
        <div class="balloon">
         <b>Получател</b>: Боряна Балканска<br/>
         <b>КИН</b>: 3441951627<br/>
-        <b>Основание</b>: Вх. такса ап. Х, месец Х
+        <b>Основание</b>: Вх. такса ап. Х, месец Х<br/>
+        <b>Такса</b>: 0.50 - 1.20лв (според размера на сумата)
        </div>
       </div>
       <div class="lead-2 mt-3"><h6 class="header-iconify">На ръка</h6></div>
@@ -182,7 +184,7 @@
 	  Ако не ползвате обекта, пак плащате. В този случай Ви се начислява такса като за <b>1 обитател</b>.<br/>
 	  <hr>
 	  <div class="balloon mb-3">
-	   <i> Разходите за управление и разходите за поддържане на общите части на етажната собственост се разпределят поравно според броя на собствениците, ползвателите и обитателите и членовете на техните домакинства независимо от етажа, на който живеят. За самостоятелен обект, в който се пребивава не повече от 30 дни в рамките на една календарна година, се заплащат разходите за управление и разходите за поддържане в размера, който е определен за един собственик, ползвател или обитател.</i>
+	   <i> Чл. 51. (1) Разходите за управление и разходите за поддържане на общите части на етажната собственост се разпределят поравно според броя на собствениците, ползвателите и обитателите и членовете на техните домакинства независимо от етажа, на който живеят. За самостоятелен обект, в който се пребивава не повече от 30 дни в рамките на една календарна година, се заплащат разходите за управление и разходите за поддържане в размера, който е определен за един собственик, ползвател или обитател.</i>
 	  </div>
 	  </p>
     </div>
