Remove Homie.bg

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 	<div class="panel">
 	 <p class="lead-2 mb-2 mt-3">Дължимата сума може да се разбере по един от следните начини:</p>
 	 <div class="text-center">
-	  <div class="lead-2"><h6 class="header-iconify">Инсталирайте Homie</h6></div>
+	  <div class="lead-2"><h6 class="header-iconify">Google Drive</h6></div>
 	  <div class="col-md-12">
 	   <div class="balloon">
-	    <b>Стъпка 1</b>: Инсталирайте <a href="https://homie.bg/" target="_blank"><u>Homie</u></a><br/>
-	    <b>Стъпка 2</b>: Регистрирайте се като потребител<br/>
-	    <b>Стъпка 3</b>: Въведете персонален код на Вашия апартамент. То е във вид <b>10001490ХХ</b>, където ХХ е номерът на апартамента Ви (напр. ако сте <b>ап. 9</b>, вашият код "<b>1000149009</b>").
+	    <b>Стъпка 1</b>: Отвори <a href="https://drive.google.com/drive/folders/1sxM_H0l_-TVJakKsMd7O1QWuzyvNcS79" target="_blank"><u>ТОЗИ ЛИНК</u></a><br/>
+	    <b>Стъпка 2</b>: Избери папка <b>"Финанси"</b> <br/>
+	    <b>Стъпка 3</b>: Избери <b>година</b>
 	   </div>
 	  </div>
 	  <div class="lead-2 mt-3"><h6 class="header-iconify">Свържете се с касиера</h6></div>
@@ -94,7 +94,7 @@
    <div class="col-md-8 mx-auto text-center pl-0 pr-0">
     <button class="accordion" id="payment">Как да си платя входната такса?</button>
 	<div class="panel">
-     <p class="lead-2 mb-2 mt-3">Таксите за входа се плащат <b><u>ежемесечно</u></b>. Плащането може да се случи по един от следните начини:</p>
+     <p class="lead-2 mb-2 mt-3">Таксите за входа се плащат <b><u>ежемесечно</u></b>.<br/><br/>Плащането може да се случи по един от следните начини:</p>
      <div class="text-center">
       <div class="lead-2 mt-3"><h6 class="header-iconify">Банков превод</h6></div>
       <div class="col-md-12">
@@ -102,7 +102,8 @@
         <b>Получател</b>: Боряна Балканска<br/>
         <b>IBAN</b>: BG46ESPY40040016710767<br/>
         <b>Основание</b>: Вх. такса ап. Х, месец Х<br/>
-        <b>Такса</b>: 0.00 - 1.20лв (според условията на банката ви)
+        <b>Такса</b>: 0.00 - 1.20лв (според условията на банката ви)<br/><br/>
+		<b>ВАЖНО</b>: <u>Ако преведете от Revolut - НЯМА ТАКСА!</u>
        </div>
       </div>
       <div class="lead-2 mt-3"><h6 class="header-iconify">Изипей каса</h6></div>
@@ -132,7 +133,7 @@
     <button class="accordion">Плаща ли се за деца?</button>
     <div class="panel">
       <p class="mt-3">
-	  Ако детето има 6 навършени години, то се третира като <b>пълноправен член</b> на домакинството.<br/>
+	  Ако детето има 6 навършени години, то се третира като <b>пълноправен член</b> на домакинството и се таксува.<br/>
 	  <hr>
 	  <div class="balloon mb-3">
 	   <i>Чл. 51. (2) Не се заплащат разходите по ал. 1 или ал. 9, т. 1 за деца, ненавършили 6-годишна възраст.</i>
@@ -216,18 +217,10 @@
 	<div class="panel">
      <div class="text-center">
       <div class="lead-2 mt-3"><h6 class="header-iconify">Viber</h6></div>
-      <div class="col-md-12">
+      <div class="col-md-12 mb-3">
        <div class="balloon">
         <b>Стъпка 1</b>: Инсталирайте <a href="https://www.viber.com/" target="_blank"><u>Viber</u></a><br/>
-        <b>Стъпка 2</b>: Поискайте достъп до групата
-       </div>
-      </div>
-      <div class="lead-2 mt-3"><h6 class="header-iconify">Homie</h6></div>
-      <div class="col-md-12">
-       <div class="balloon mb-3">
-        <b>Стъпка 1</b>: Инсталирайте <a href="https://homie.bg/" target="_blank"><u>Homie</u></a><br/>
-        <b>Стъпка 2</b>: Регистрирайте се като потребител<br/>
-        <b>Стъпка 3</b>: Въведете персонален код на Вашия апартамент. То е във вид <b>10001490ХХ</b>, където ХХ е номерът на апартамента Ви (напр. ако сте <b>ап. 9</b>, вашият код "<b>1000149009</b>").
+        <b>Стъпка 2</b>: Поискайте достъп до групата на блока
        </div>
       </div>
      </div>
