Add iframe for Due Payments

--- a/index.html
+++ b/index.html
@@ -68,24 +68,7 @@
    <div class="col-md-8 mx-auto text-center pl-0 pr-0">
 	<button class="accordion" id="debt">Как да разбера колко дължа?</button>
 	<div class="panel">
-	 <p class="lead-2 mb-2 mt-3">Дължимата сума може да се разбере по един от следните начини:</p>
-	 <div class="text-center">
-	  <div class="lead-2"><h6 class="header-iconify">Google Drive</h6></div>
-	  <div class="col-md-12">
-	   <div class="balloon">
-	    <b>Стъпка 1</b>: Отвори <a href="https://drive.google.com/drive/folders/1sxM_H0l_-TVJakKsMd7O1QWuzyvNcS79" target="_blank"><u>ТОЗИ ЛИНК</u></a><br/>
-	    <b>Стъпка 2</b>: Избери папка <b>"Финанси"</b> <br/>
-	    <b>Стъпка 3</b>: Избери <b>година</b>
-	   </div>
-	  </div>
-	  <div class="lead-2 mt-3"><h6 class="header-iconify">Свържете се с касиера</h6></div>
-	  <div class="col-md-12">
-	   <div class="balloon mb-3">
-	    <b>Касиер</b>: Боряна Балканска<br/>
-	    <b>Тел.</b>: <a href="tel:+359899494814">0899 49 48 14</a>
-	   </div>
-	  </div>
-	 </div>
+	  <iframe src="https://docs.google.com/spreadsheets/d/12-gw8skcsFDXn4kR33gbbhUWCSnO5ku1" frameborder="1" width="100%" height="500px"></iframe>
     </div>
    </div>
   </div>
