--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   <div class="row mt-6">
    <div class="col-md-8 mx-auto text-center pl-0 pr-0">
 	<button class="accordion" id="debt">Как да разбера колко дължа?</button>
-	<div class="panel">
-	  <iframe src="https://docs.google.com/spreadsheets/d/12-gw8skcsFDXn4kR33gbbhUWCSnO5ku1" frameborder="1" width="100%" height="500px"></iframe>
+	<div class="panel" style="padding:0">
+	  <iframe src="https://docs.google.com/spreadsheets/d/12-gw8skcsFDXn4kR33gbbhUWCSnO5ku1?usp=sharing&amp;widget=true&amp;headers=false" frameborder="0" width="100%" height="500px"></iframe>
     </div>
    </div>
   </div>
