Remove the deadline for payments

--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
       <div class="col-md-12">
        <div class="balloon mb-3">
         <b>Къде</b>: вх. Б, ап. 33<br/>
-        <b>Кога</b>: от 1-о до 3-о число<br/>
         <b>Тел.</b>: <a href="tel:+359899494814">0899 49 48 14</a>
        </div>
       </div>
@@ -237,8 +236,7 @@
        <div class="balloon mb-3 mt-3">
         <b>Домоуправител</b>: <span class="small"><br/>Сотир Сотиров, <a href="tel:+359888580803">0888 58 08 03</a></span><br/><br/>
         <b>Касиер</b>: <span class="small"><br/>Боряна Балканска, <a href="tel:+359899494814">0899 49 48 14</a></span><br/><br/>
-        <b>Чипове и камери</b>: <span class="small"><br/>Цветелин Крумов, <a href="tel:+359882410500">0882 41 05 00</a></span></span><br/><br/>
-        <b>ИТ</b>: <span class="small"><br/>Мирослав Джоканов, <a href="tel:+359885358308">0885 35 83 08</a></span>
+        <b>Чипове и камери</b>: <span class="small"><br/>Цветелин Крумов, <a href="tel:+359882410500">0882 41 05 00</a></span></span>
        </div>
       </div>
      </div>
