Add section about "Elevators Tax"

--- a/index.html
+++ b/index.html
@@ -158,7 +158,26 @@
     </div>
    </div>
   </div>
-  
+
+  <div class="row">
+   <div class="col-md-8 mx-auto text-center pl-0 pr-0">
+    <button class="accordion">Плаща ли се за асансьор?</button>
+    <div class="panel">
+      <p class="mt-3">
+	  Да, по закон всеки собственик е длъжен да плаща за абонамент и поддръжка на асансьора. <b>Независимо от етажа, на който живее</b>. По същата логика ремонт на покрива отново се покрива от всички, а не само от живущите на последния етаж. Може да прочетете повече по темата <a href="https://www.universumv.com/index.php/common-space-services/social-activities/item/61-use-and-pay">ТУК</a>.<br/>
+	  <hr>
+	  <div class="balloon">
+	   <i>Чл. 51. (1) Разходите за управление и разходите за поддържане на общите части се разпределят според броя на собствениците, ползвателите и обитателите и членовете на техните домакинства <b>независимо от етажа, на който живеят.</b></i>
+	  </div>
+	  <hr>
+	  <div class="balloon mb-3">
+	   <i>Чл. 38. При сгради, в които етажи или части от етажи принадлежат на различни собственици, ОБЩИ на всички собственици са земята, върху която е построена сградата, дворът, основите, външните стени, вътрешните разделителни стени между отделните части, вътрешните носещи стени, колоните, трегерите, плочите, гредоредите, стълбите, площадките, покривите, стените между таванските и избените помещения на отделните собственици, комините, външните входни врати на сградата и вратите към общи тавански и избени помещения, главните линии на всички видове инсталации и централните им уредби, <b>асансьорите</b>, водосточните тръби, жилището на портиера и всичко друго, което по естеството си или по предназначение служи за общо ползуване.</i>
+	  </div>
+	  </p>
+    </div>
+   </div>
+  </div>
+
   <div class="row">
    <div class="col-md-8 mx-auto text-center pl-0 pr-0">
     <button class="accordion">Ами ако не ползвам обекта?</button>
@@ -173,7 +192,7 @@
     </div>
    </div>
   </div>
-  
+
   <div class="row">
    <div class="col-md-8 mx-auto text-center pl-0 pr-0">
     <button class="accordion">Какво се случва, ако не платя?</button>
@@ -192,7 +211,7 @@
     </div>
    </div>
   </div>
-  
+
   <div class="row">
    <div class="col-md-8 mx-auto text-center pl-0 pr-0">
     <button class="accordion">Как комуникираме в блока?</button>
